--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lotide",
-  "version": "1.0.0",
+  "name": "@freem11/lotide",
+  "version": "1.0.1",
   "description": "",
   "main": "assertArraysEqual.js",
   "directories": {
